# WinClassicGuiEditor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cpp23 Basic Project Template.slnx  README.md  WinClassicGuiEditor.sln
Project Files/: Project.vcxproj  Project.vcxproj.filters
Project Files/src/: project.console.ixx  project.engine.config.ixx  project.entry.ixx  project.entry.win.ixx  project.log.ixx  project.timing.ixx  project.ui.ids.ixx  project.ui.layout.ixx
WinClassicGuiEditor/: WinClassicGuiEditor.vcxproj  WinClassicGuiEditor.vcxproj.filters  example_import_ui.ixx
WinClassicGuiEditor/src/: importparser_tests.cpp  main.cpp  win32_ui_editor.importparser.ixx  win32_ui_editor.ixx  win32_ui_editor.model.ixx
docs/samples/: export_sample_win32_controls.txt
